--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hi. I'm Tomasz.</h1>
-      <p>I'm a <span class="typed" data-typed-items="Software Developer, Photographer, Drone Pilot, Filmmaker"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Developer, Coffee Enthusiast, Photographer, Filmmaker"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -81,7 +81,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">I’m a passionate software developer and photographer. When I’m not immersed in tech or behind the camera, you’ll likely find me brewing a perfect cup of coffee using alternative brewing methods—from pour-over to Aeropress, I enjoy exploring the art and science of coffee. I’m also deeply drawn to the outdoors, with a love for bouldering that sharpens my focus and hiking in the mountains, where I find inspiration in nature’s grandeur.</p>
         </div>
 
         <div class="row">
@@ -90,31 +90,29 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Developer &amp; Photographer.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <br/>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
                         href=https://tomsoft.dev>tomsoft.dev</a></span></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mychaty@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Krakow, Poland</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <!--li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>33</span></li-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:mychaty@gmail.com">mychaty@gmail.com</a></span></li>
+                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+            <br/>
+            <p class="fst-italic" style="text-align:justify">
+              Whether it's designing software, capturing moments, or scaling new heights, I bring curiosity, creativity, and passion to everything I do.
+            </p>           
           </div>
         </div>
 
@@ -127,7 +125,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">I am proficient in C++, with a strong foundation in object-oriented programming, data structures, and algorithms, and have basic knowledge of creating cross-platform mobile applications using Flutter. Beyond programming, I have honed my skills in photography and videography, excelling in capturing compelling visuals, dynamic storytelling, and post-production editing using industry-standard tools.</p>
         </div>
 
         <div class="row skills-content">
@@ -193,7 +191,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -259,7 +257,9 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">Welcome to my portfolio, where creativity meets technical expertise. Here, you’ll find a showcase of my work in software development. Alongside my tech endeavors, I’ve included a collection of my photography and videography, featuring moments captured through my lens and stories told through visuals.
+
+            Each project reflects my dedication to detail, innovation, and passion for exploring new possibilities—whether it’s crafting efficient code, brewing a perfect cup of coffee, or scaling a mountain. Take a look around and explore the blend of skills and creativity that drive my work.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
