Update missing sections. Resume timeline ToDo

--- a/index.html
+++ b/index.html
@@ -191,22 +191,11 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p style="text-align:justify">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">My resume highlights my technical skills, professional experience, and creative projects that demonstrate my ability to solve problems, innovate, and deliver quality results. With a passion for detail and a drive to continuously learn, I bring value to every project I take on.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Tomasz Nowak</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
@@ -267,12 +256,12 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-apps">App</li>
-              <li data-filter=".filter-photo">Photo</li>
-              <li data-filter=".filter-video">Video</li>
               <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-photo">Photo</li>
+              <li data-filter=".filter-video">Video</li>              
             </ul>
           </div>
-        </div><li data-filter=".filter-video">Video</li>
+        </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
@@ -377,7 +366,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="text-align:justify">Let’s connect! If you’re interested in collaborating on a project, discussing software development, or exploring opportunities, I’d be happy to hear from you.
+          Feel free to email me or connect with me on social media platforms. Alternatively, use the contact form below, and I’ll get back to you promptly.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
