--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
                         href=https://tomsoft.dev>tomsoft.dev</a></span></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <!--li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li-->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Krakow, Poland</span></li>
                 </ul>
               </div>
@@ -193,77 +193,6 @@
           <h2>Resume</h2>
           <p style="text-align:justify">My resume highlights my technical skills, professional experience, and creative projects that demonstrate my ability to solve problems, innovate, and deliver quality results. With a passion for detail and a drive to continuously learn, I bring value to every project I take on.</p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Applied Computer Science</h4>
-              <h5>2013 - 2014</h5>
-              <p>Subject: molecular dynamics</p>              
-              <p>Faculty of Metals Engineering and Industrial Computer Science</p>          
-              <p><em>AGH University of Science and Technology, Krakow, Poland</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Engineer of Applied Computer Science</h4>
-              <h5>2009 - 2013</h5>
-              <p>Subject: molecular statics</p>              
-              <p>Faculty of Metals Engineering and Industrial Computer Science</p>
-              <p><em>AGH University of Science and Technology, Krakow, Poland</em></p>              
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"><p><em>AGH University of Science and Technology, Krakow, Poland</em></p>
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior Software Engineer, Team Leader</h4>
-              <h5>2022 - Present</h5>
-              <p><em>Grass Valley</em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
-          <!--div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div-->
-        </div>
-
       </div>
     </section><!-- End Resume Section -->
 
