Fix displaying of the map

--- a/index.html
+++ b/index.html
@@ -348,9 +348,7 @@
                 <p>+48 602 133 553</p>
               </div>
 
-              <iframe
-                src="https://www.openstreetmap.org/export/embed.html?bbox=19.866199493408207%2C50.036745480538016%2C20.009536743164066%2C50.08738205168907&amp;layer=mapnik"
-                frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 290px;" src="https://www.openstreetmap.org/export/embed.html?bbox=19.831008911132816%2C49.981916255087015%2C20.045242309570312%2C50.13125319519268&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?#map=13/50.05664/19.93813&amp;layers=N">View Larger Map</a></small>
             </div>
 
           </div>
