--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p style="text-align:justify">I am proficient in C++, with a strong foundation in object-oriented programming, data structures, and algorithms, and have basic knowledge of creating cross-platform mobile applications using Flutter. Beyond programming, I have honed my skills in photography and videography, excelling in capturing compelling visuals, dynamic storytelling, and post-production editing using industry-standard tools.</p>
+          <!--p style="text-align:justify">I am proficient in C++, with a strong foundation in object-oriented programming, data structures, and algorithms, and have basic knowledge of creating cross-platform mobile applications using Flutter. Beyond programming, I have honed my skills in photography and videography, excelling in capturing compelling visuals, dynamic storytelling, and post-production editing using industry-standard tools.</p-->
         </div>
 
         <div class="row skills-content">
@@ -158,9 +158,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Flutter<i class="val">40%</i></span>
+              <span class="skill">Flutter<i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -185,13 +185,13 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
+    <!-- ======= Resume Section ======= --> 
     <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p style="text-align:justify">My resume highlights my technical skills, professional experience, and creative projects that demonstrate my ability to solve problems, innovate, and deliver quality results. With a passion for detail and a drive to continuously learn, I bring value to every project I take on.</p>
+          // ADD HERE 3 slides with text beside (photography, coding, filmmaking)
         </div>
       </div>
     </section><!-- End Resume Section -->
