Reorganize 'resume' section to fit more company services

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          // ADD HERE 3 slides with text beside (photography, coding, filmmaking)
+          // ADD HERE 3 pictures with text beside (photography, coding, filmmaking)
         </div>
       </div>
     </section><!-- End Resume Section -->
