--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="text-align:justify">I’m a passionate software developer and photographer. When I’m not immersed in tech or behind the camera, you’ll likely find me brewing a perfect cup of coffee using alternative brewing methods—from pour-over to Aeropress, I enjoy exploring the art and science of coffee. I’m also deeply drawn to the outdoors, with a love for bouldering that sharpens my focus and hiking in the mountains, where I find inspiration in nature’s grandeur.</p>
+          <p style="text-align:justify">I'm a passionate software developer and photographer. When I'm not immersed in tech or behind the camera, you'll likely find me brewing a perfect cup of coffee using alternative brewing methods—from pour-over to Aeropress, I enjoy exploring the art and science of coffee. I'm also deeply drawn to the outdoors, with a love for bouldering that sharpens my focus and hiking in the mountains, where I find inspiration in nature's grandeur.</p>
         </div>
 
         <div class="row">
@@ -101,12 +101,10 @@
                 </ul>
               </div>
               <div class="col-lg-6">
-                <ul>
-                  <!--li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>33</span></li-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:mychaty@gmail.com">mychaty@gmail.com</a></span></li>
-                  
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
+                <!--li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>33</span></li-->
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:mychaty@gmail.com">mychaty@gmail.com</a></span></li>
+                
+                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </div>
             </div>
             <br/>
@@ -191,8 +189,50 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          // ADD HERE 3 pictures with text beside (photography, coding, filmmaking)
         </div>
+
+        <div class="row mb-5" data-aos="fade-up">
+          <div class="col-lg-6">
+            <img src="assets/img/resume/coding.jpg" class="img-fluid rounded shadow" alt="Coding">
+          </div>
+          <div class="col-lg-6 d-flex align-items-center">
+            <div class="ps-lg-4">
+              <h3>Software Development</h3>
+              <p class="fst-italic" style="text-align:justify">
+                With a strong foundation in C++ and a passion for creating efficient, scalable solutions, I specialize in developing high-performance applications. My expertise includes multithreading, CUDA programming, and cross-platform development. I'm constantly exploring new technologies and methodologies to deliver cutting-edge software solutions.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mb-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 order-lg-2">
+            <img src="assets/img/resume/photography.jpg" class="img-fluid rounded shadow" alt="Photography">
+          </div>
+          <div class="col-lg-6 order-lg-1 d-flex align-items-center">
+            <div class="pe-lg-4">
+              <h3>Photography</h3>
+              <p class="fst-italic" style="text-align:justify">
+                Through my lens, I capture the essence of moments and landscapes, focusing on nature, architecture, and street photography. My work combines technical precision with artistic vision, creating compelling visual narratives that tell stories and evoke emotions. I specialize in both digital and film photography, bringing a unique perspective to every shot.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6">
+            <img src="assets/img/resume/filmmaking.jpg" class="img-fluid rounded shadow" alt="Filmmaking">
+          </div>
+          <div class="col-lg-6 d-flex align-items-center">
+            <div class="ps-lg-4">
+              <h3>Filmmaking</h3>
+              <p class="fst-italic" style="text-align:justify">
+                My approach to filmmaking combines technical expertise with creative storytelling. From concept development to post-production, I create engaging visual content that resonates with audiences. Whether it's short films, documentaries, or commercial content, I bring stories to life through compelling visuals and narrative structure.
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section><!-- End Resume Section -->
 
@@ -202,9 +242,9 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p style="text-align:justify">Welcome to my portfolio, where creativity meets technical expertise. Here, you’ll find a showcase of my work in software development. Alongside my tech endeavors, I’ve included a collection of my photography and videography, featuring moments captured through my lens and stories told through visuals.
+          <p style="text-align:justify">Welcome to my portfolio, where creativity meets technical expertise. Here, you'll find a showcase of my work in software development. Alongside my tech endeavors, I've included a collection of my photography and videography, featuring moments captured through my lens and stories told through visuals.
 
-            Each project reflects my dedication to detail, innovation, and passion for exploring new possibilities—whether it’s crafting efficient code, brewing a perfect cup of coffee, or scaling a mountain. Take a look around and explore the blend of skills and creativity that drive my work.</p>
+            Each project reflects my dedication to detail, innovation, and passion for exploring new possibilities—whether it's crafting efficient code, brewing a perfect cup of coffee, or scaling a mountain. Take a look around and explore the blend of skills and creativity that drive my work.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -322,8 +362,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p style="text-align:justify">Let’s connect! If you’re interested in collaborating on a project, discussing software development, or exploring opportunities, I’d be happy to hear from you.
-          Feel free to email me or connect with me on social media platforms. Alternatively, use the contact form below, and I’ll get back to you promptly.</p>
+          <p style="text-align:justify">Let's connect! If you're interested in collaborating on a project, discussing software development, or exploring opportunities, I'd be happy to hear from you.
+          Feel free to email me or connect with me on social media platforms. Alternatively, use the contact form below, and I'll get back to you promptly.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
