Fix resume with images. Remove skills temporary

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <!--li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li-->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -96,12 +95,10 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a
                         href=https://tomsoft.dev>tomsoft.dev</a></span></span></li>
-                  <!--li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li-->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Krakow, Poland</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
-                <!--li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>33</span></li-->
              <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:mychaty@gmail.com">mychaty@gmail.com</a></span></li>
                 
@@ -120,12 +117,12 @@
     </section><!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    
+    <!--section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <!--p style="text-align:justify">I am proficient in C++, with a strong foundation in object-oriented programming, data structures, and algorithms, and have basic knowledge of creating cross-platform mobile applications using Flutter. Beyond programming, I have honed my skills in photography and videography, excelling in capturing compelling visuals, dynamic storytelling, and post-production editing using industry-standard tools.</p-->
+          <h2>Skills</h2>    
         </div>
 
         <div class="row skills-content">
@@ -183,7 +180,7 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section--><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= --> 
     <section id="resume" class="resume">
