Fix again spacing between titles and resume images. The proper bootstrap way now.

--- a/index.html
+++ b/index.html
@@ -190,13 +190,12 @@
           <h2>Resume</h2>
         </div>
 
-        <div class="row mb-5" data-aos="fade-up">
+        <div class="row mb-5 py-4" data-aos="fade-up">
           <div class="col-lg-6">
             <img src="assets/img/resume/photography.jpg" class="img-fluid rounded shadow" alt="Photography">
           </div>
-          <p/>
-          <div class="col-lg-6 order-lg-1 d-flex align-items-center">
-            <div class="pe-lg-4">
+          <div class="col-lg-6 d-flex align-items-center">
+            <div class="ps-lg-4 pt-4 pt-lg-0">
               <h3>Photography</h3>
               <p class="fst-italic" style="text-align:justify">
                 Through my lens, I capture the essence of moments and landscapes, focusing on nature, architecture, and street photography. My work combines technical precision with artistic vision, creating compelling visual narratives that tell stories and evoke emotions. I specialize in both digital and film photography, bringing a unique perspective to every shot.
@@ -205,13 +204,12 @@
           </div>
         </div>
 
-        <div class="row mb-5" data-aos="fade-up" data-aos-delay="100">
+        <div class="row mb-5 py-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6 order-lg-2">
             <img src="assets/img/resume/coding.jpg" class="img-fluid rounded shadow" alt="Coding">
           </div>
-          <p/>
-          <div class="col-lg-6 d-flex align-items-center">
-            <div class="ps-lg-4">
+          <div class="col-lg-6 order-lg-1 d-flex align-items-center">
+            <div class="pe-lg-4 pt-4 pt-lg-0">
               <h3>Software Development</h3>
               <p class="fst-italic" style="text-align:justify">
                 With a strong foundation in C++ and a passion for creating efficient, scalable solutions, I specialize in developing high-performance applications. My expertise includes multithreading, CUDA programming, and cross-platform development. I'm constantly exploring new technologies and methodologies to deliver cutting-edge software solutions.
@@ -220,13 +218,12 @@
           </div>
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="200">
+        <div class="row py-4" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-6">
             <img src="assets/img/resume/filmmaking.jpg" class="img-fluid rounded shadow" alt="Filmmaking">
           </div>
-          <p/>
           <div class="col-lg-6 d-flex align-items-center">
-            <div class="ps-lg-4">
+            <div class="ps-lg-4 pt-4 pt-lg-0">
               <h3>Filmmaking</h3>
               <p class="fst-italic" style="text-align:justify">
                 My approach to filmmaking combines technical expertise with creative storytelling. From concept development to post-production, I create engaging visual content that resonates with audiences. Whether it's short films, documentaries, or commercial content, I bring stories to life through compelling visuals and narrative structure.
