--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 
     <div class="profile">
       <img src="../assets/img/IMG_8533.jpg" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a href="index.html">Tomasz Nowak</a></h1>
+      <h1 class="text-light"><a href="index.php">Tomasz Nowak</a></h1>
       <div class="social-links mt-3 text-center">
         <a href="https://github.com/speedy901990" class="github" target="_blank"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/_tomasznowak_/" class="instagram" target="_blank"><i
@@ -19,11 +19,11 @@
 
     <nav id="navbar" class="nav-menu navbar">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="../index.php#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="../index.php#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="../index.php#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="../index.php#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <li><a href="../index.php#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
   </div>
