Refactor and minor routing fixes

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 
     <div class="profile">
       <img src="../assets/img/IMG_8533.jpg" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a href="index.php">Tomasz Nowak</a></h1>
+      <h1 class="text-light"><a href="../index.php">Tomasz Nowak</a></h1>
       <div class="social-links mt-3 text-center">
         <a href="https://github.com/speedy901990" class="github" target="_blank"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/_tomasznowak_/" class="instagram" target="_blank"><i
